fixed issue causing overflow of text in schedule and activity modal to be cropped

--- a/src/components/calendar/calendar.css
+++ b/src/components/calendar/calendar.css
@@ -1,13 +1,14 @@
 .react-calendar {
-    width: fit-content
+    width: fit-content;
 }
 
 .react-calendar__tile {
-    height: 100px
+    height: 100px;
+    font-size: 9px;
 }
 
 .react-calendar__tile--active {
-    background: white
+    background: white;
   }
 
 .react-calendar__month-view__days__day {
